# portfolio

./: .gitignore  Cargo.toml  README.md  index.html
src/: app.rs  main.rs  tailwind.css
src/components/: about.rs  blog.rs  blog_post.rs  contact.rs  home.rs  mod.rs  portfolies.rs  resume.rs
src/components/common/: header.rs  loader.rs  mod.rs  sidebar.rs
src/components/services/: services.rs
