[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo = "0.11.0"
serde = "1.0.195"
serde_json = "1.0.111"
chrono = "0.4.32"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4"
